testsuite/tests/properties/invalid_dynvar/call_unbound.lkt
import common

class Example: BaseNode implements TokenNode {
    fun get_int_impl(): Int = node.internal_get_int()
}
